infrastructure/ecs_security_group.tf
resource "aws_security_group" "ecs_service-sg" {
  name        = "reversi_ecs_service-sg"
  vpc_id      = aws_vpc.reversi-vpc.id
  description = "for_reversi_ecs_service_security_group"
  egress      = [
    {
      cidr_blocks = [
        "0.0.0.0/0",
      ]
      description      = ""
      from_port        = 0
      ipv6_cidr_blocks = []
      prefix_list_ids  = []
      protocol         = "-1"
      security_groups  = []
      self             = false
      to_port          = 0
    },
  ]
  ingress = [
    {
      cidr_blocks = [
        "0.0.0.0/0",
      ]
      description      = ""
      from_port        = 8080
      ipv6_cidr_blocks = []
      prefix_list_ids  = []
      protocol         = "tcp"
      security_groups  = []
      self             = false
      to_port          = 8080
    },
  ]
  tags     = {}
  tags_all = {}
}

resource "aws_security_group" "reversi_lb-sg" {
  vpc_id      = aws_vpc.reversi-vpc.id
  name        = "reversi_lb-sg"
  description = "for_reversi_load_barancer_security_group"
  tags        = {}
  tags_all    = {}
  egress      = [
    {
      cidr_blocks = [
        "0.0.0.0/0",
      ]
      description      = ""
      from_port        = 0
      ipv6_cidr_blocks = []
      prefix_list_ids  = []
      protocol         = "-1"
      security_groups  = []
      self             = false
      to_port          = 0
    },
  ]
  ingress = [
    {
      cidr_blocks = [
        "0.0.0.0/0",
      ]
      description      = ""
      from_port        = 0
      ipv6_cidr_blocks = []
      prefix_list_ids  = []
      protocol         = "-1"
      security_groups  = []
      self             = false
      to_port          = 0
    }
  ]
}
